// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MostUsedLocationButtons > should render one button 1`] = `
<div
  class="space-y-2"
>
  
  <button
    class="btn whitespace-nowrap block"
    data-v-814a3da6=""
  >
    
    Argentina
    
  </button>
  
</div>
`;

exports[`MostUsedLocationButtons > should render three buttons 1`] = `
<div
  class="space-y-2"
>
  
  <button
    class="btn whitespace-nowrap block"
    data-v-814a3da6=""
  >
    
    Sweden
    
  </button>
  <button
    class="btn whitespace-nowrap block"
    data-v-814a3da6=""
  >
    
    Norway
    
  </button>
  <button
    class="btn whitespace-nowrap block"
    data-v-814a3da6=""
  >
    
    Iceland
    
  </button>
  
</div>
`;
